Bug 1884308 - Chunk bookmark GUIDs when retrieving details to avoid going over Sqlite variables limit.  a=diannaS

Original Revision: https://phabricator.services.mozilla.com/D204660

Differential Revision: https://phabricator.services.mozilla.com/D204775